# agent-harness

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: benchmark-smoke.yml  publish.yml
agents/: README.md  echo_agent.py  example_metadata_agent.py  simple_qa_agent.py  terminal_agent.py
agents/assistant_bench_agent/: __init__.py  agent.py  prompts.py  tools.py
agents/compact_search_agent/: __init__.py  agent.py  prompts.py  requirements.txt  tools.py
agents/gaia_agent_v1/: __init__.py  agent.py  compaction.py  prompts.py  requirements.txt  runner.py  tools.py
agents/hal_generalist/: __init__.py  agent.py  prompts.py  requirements.txt  smolagents_runner.py  tools.py
src/harness/: __init__.py  agent.py  cli.py  grading.py  hf_integration.py  logging.py  parallel.py  protocol.py  run_metadata.py  runner.py
src/harness/agents/: __init__.py  base.py
src/harness/benchmarks/: __init__.py  _assistantbench_eval.py  arc_agi.py  arithmetic.py  assistant_bench.py  base.py  browsecomp.py  gaia.py  graders.py  hle.py  registry.py  terminal_bench.py
src/harness/containers/: __init__.py  manager.py
src/harness/examples/: __init__.py  echo_agent.sh  metrics_agent.py
src/harness/execution/: __init__.py  orchestrator.py
src/harness/grading/: __init__.py  core.py  pipeline.py
src/harness/providers/: __init__.py  base.py  litellm_provider.py  registry.py
src/harness/sandbox/: __init__.py
tests/: __init__.py  test_agents.py  test_assistant_bench.py  test_continue.py  test_contracts.py  test_core.py  test_grading.py  test_hf_integration.py  test_p0_architecture.py  test_run_records.py
