[tool.poetry]
name = "agent-harness"
version = "0.1.0"
description = "A local-first, lightweight harness for AI agent evaluations"
authors = ["Franck Ndzomga <ndzomgafs@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "harness", from = "src"}]
keywords = ["ai", "agents", "evaluation", "benchmark", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
python-dotenv = "^1.0.0"
smolagents = {version = ">=1.14.0", optional = true}
pymupdf = {version = ">=1.24", optional = true}
openpyxl = {version = ">=3.1", optional = true}
markdownify = {version = ">=0.11", optional = true}
pillow = {version = ">=10.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.providers.dependencies]
litellm = "^1.30.0"

[tool.poetry.group.benchmarks.dependencies]
datasets = "^2.18.0"
huggingface-hub = ">=0.31.2"

[tool.poetry.extras]
litellm = ["litellm"]
benchmarks = ["datasets", "huggingface-hub"]
hal-generalist = ["smolagents", "pymupdf", "openpyxl", "markdownify", "pillow"]
all = ["litellm", "datasets", "huggingface-hub", "smolagents", "pymupdf", "openpyxl", "markdownify", "pillow"]

[tool.poetry.scripts]
harness = "harness.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
